some changes to responsiveness, and hope that it is able to deploy on github.

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -78,3 +78,21 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+@media screen and (max-width: 480px) {
+  body{
+      font-size: small;
+  }
+  .note{
+      display: flex;
+      flex-shrink: 3;
+  };
+  .save{
+      display: flex;
+      flex-shrink: 2;
+  }
+  .time{
+      display: flex;
+      flex-shrink: 2;
+  }
+}
